# OfficeCli-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURE-GAPS.md  L2-GAPS.md  Makefile  PHASE-1.2.md  PHASE-2-NO-DEPS.md  PHASE-2-WITH-DEPS.md  README.md  README_ja.md  README_ko.md  README_zh.md  SKILL.md  install.ps1  install.sh
.github/workflows/: build.yml
crates/ascii-render/: Cargo.toml
crates/ascii-render/src/: lib.rs
crates/document-diff/: Cargo.toml
crates/document-diff/src/: lib.rs
crates/docx-handler/: Cargo.toml
crates/docx-handler/src/: add.rs  dom_types.rs  handler.rs  headers.rs  helpers.rs  html_preview.rs  layout.rs  lib.rs  mutations.rs  navigation.rs  para_id.rs  query.rs  raw.rs  text_offset.rs  view.rs
crates/handler-common/: Cargo.toml
crates/handler-common/src/: attribute_filter.rs  chart.rs  color.rs  css.rs  datetime.rs  document_handler.rs  document_issue.rs  document_node.rs  extended_properties.rs  find_replace.rs  fonts.rs  hyperlink_validator.rs  image_ops.rs  insert_position.rs  lib.rs  markdown.rs  mutation_selector_guard.rs  output_format.rs  path_aliases.rs  path_range.rs  path_segment.rs  selector.rs  style_unsupported_hints.rs  svg_ops.rs  text_map.rs  validation_error.rs
crates/image-toolkit/: Cargo.toml
crates/image-toolkit/src/: lib.rs
crates/layout-engine/: Cargo.toml
crates/layout-engine/src/: lib.rs
crates/odg-handler/: Cargo.toml
crates/odg-handler/src/: add.rs  dom_types.rs  handler.rs  lib.rs  mutations.rs  navigation.rs  query.rs  raw.rs  text_offset.rs  view.rs
crates/officecli/: Cargo.toml
crates/officecli/src/: ai_adapter.rs  clipboard.rs  main.rs  mcp.rs  output.rs  resident.rs  screenshot.rs  watch.rs
crates/officecli/src/commands/: add.rs  add_part.rs  ascii.rs  batch.rs  clipboard_cmd.rs  convert.rs  create.rs  diff_cmd.rs  dump.rs  export.rs  extract_text.rs  format_handler_session.rs  get.rs  help.rs  image.rs  import.rs  info.rs  install.rs  merge.rs  mod.rs  move_element.rs  plugin_process.rs  plugins.rs  query.rs  raw.rs  raw_set.rs  refresh.rs  remove.rs  save.rs  set.rs  skills.rs  swap.rs  template_cmd.rs  validate.rs  view.rs  watch_client.rs  workflow_cmd.rs
crates/officecli/tests/: cli_smoke.rs
crates/oxml/: Cargo.toml
crates/oxml/src/: content_types.rs  lib.rs  namespace.rs  package.rs  part.rs  rels.rs  validate.rs  xml_util.rs
crates/pdf-handler/: Cargo.toml
crates/pdf-handler/src/: content_stream.rs  font_embedder.rs  handler.rs  html_preview.rs  lib.rs  modifier.rs  navigation.rs  reader.rs  render.rs  text_extract.rs  text_offset.rs  view.rs
crates/pptx-handler/: Cargo.toml
crates/pptx-handler/src/: add.rs  dom_types.rs  handler.rs  html_preview.rs  lib.rs  mutations.rs  navigation.rs  query.rs  raw.rs  svg_preview.rs  table_ops.rs  text_offset.rs  view.rs
crates/render-pdf/: Cargo.toml
crates/render-pdf/src/: lib.rs
crates/render-png/: Cargo.toml
crates/render-png/src/: lib.rs
crates/svg-handler/: Cargo.toml
crates/svg-handler/src/: add.rs  dom_types.rs  handler.rs  html_preview.rs  lib.rs  mutations.rs  navigation.rs  query.rs  raw.rs  text_offset.rs  view.rs
crates/template-merger/: Cargo.toml
crates/template-merger/src/: lib.rs
crates/workflow-runner/: Cargo.toml
crates/workflow-runner/src/: lib.rs
crates/xlsx-handler/: Cargo.toml
crates/xlsx-handler/src/: add.rs  dom_types.rs  formula_eval.rs  handler.rs  helpers.rs  html_preview.rs  import.rs  layout.rs  lib.rs  mutations.rs  navigation.rs  para_id.rs  query.rs  raw.rs  sheets.rs  slicer.rs  styles.rs  text_offset.rs  view.rs
crates/xlsx-handler/src/formula/: functions.rs  mod.rs  parser.rs  resolver.rs  tokenizer.rs  types.rs
docs/: integration-range-map-sync.zh.md  rfc-set-by-bookmark-mutation-report.md
examples/: README.md
examples/word/: bookmark.docx  bookmark.sh  bookmark_batch.docx  formulas.docx  formulas.sh  numbering-showcase.sh  pdfToWord.docx  tables.docx  tables.sh  textbox.sh
schemas/help/docx/: bookmark.json
scripts/: build-release.sh  download.sh
sdk/python/: demo.py  officecli.py  pyproject.toml
skills/morph-ppt/: SKILL.md
skills/morph-ppt-3d/: SKILL.md
skills/officecli/: SKILL.md
skills/officecli-academic-paper/: SKILL.md
skills/officecli-data-dashboard/: SKILL.md
skills/officecli-docx/: SKILL.md
skills/officecli-financial-model/: SKILL.md
skills/officecli-pdf/: SKILL.md
skills/officecli-pitch-deck/: SKILL.md
skills/officecli-pptx/: SKILL.md
skills/officecli-word-form/: SKILL.md
skills/officecli-xlsx/: SKILL.md
