[workspace]
resolver = "2"
members = [
    "crates/officecli",
    "crates/oxml",
    "crates/docx-handler",
    "crates/xlsx-handler",
    "crates/pptx-handler",
    "crates/pdf-handler",
    "crates/handler-common",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anthropics/officecli"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "string"] }

# XML
quick-xml = { version = "0.37", features = ["serialize"] }
roxmltree = "0.10"

# ZIP (OOXML packages)
zip = "2"

# PDF
lopdf = "0.34"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP (Watch mode)
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Terminal colors
colored = "2"

# Temp files
tempfile = "3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Legacy Office format conversion
office_oxide = { version = "0.1.2" }
