[workspace]
resolver = "2"
members = [
    "crates/officecli",
    "crates/oxml",
    "crates/docx-handler",
    "crates/xlsx-handler",
    "crates/pptx-handler",
    "crates/pdf-handler",
    "crates/handler-common",
    "crates/template-merger",
]

[workspace.package]
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anthropics/officecli"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "string"] }

# XML
quick-xml = { version = "0.37", features = ["serialize"] }
roxmltree = "0.10"

# ZIP (OOXML packages)
zip = "2"

# PDF
lopdf = "0.34"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP (Watch mode)
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Terminal colors
colored = "2"

# Temp files
tempfile = "3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Legacy Office format conversion
office_oxide = { version = "0.1.2" }

# Markdown parsing
pulldown-cmark = "0.13"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CSS parsing
cssparser = "0.37"

# Chart rendering
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_backend", "line_series", "point_series"] }

# SVG parsing and manipulation
usvg = { version = "0.44", default-features = false, features = ["text"] }
svgtypes = "0.15"

# Font discovery and parsing
fontdb = "0.18"
ttf-parser = "0.24"
