[package]
name = "docx-handler"
version.workspace = true
edition.workspace = true

[dependencies]
oxml = { path = "../oxml" }
handler-common = { path = "../handler-common" }
template-merger = { path = "../template-merger" }
quick-xml = { workspace = true }
roxmltree = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }