[package]
name = "odg-handler"
version.workspace = true
edition.workspace = true

[dependencies]
handler-common = { path = "../handler-common" }
lo_draw = "0.5"
lo_core = "0.5"
lo_zip = "0.5"
roxmltree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
