[package]
name = "pdf-handler"
version.workspace = true
edition.workspace = true

[features]
default = []
png = ["resvg", "tiny-skia", "usvg"]

[dependencies]
handler-common = { path = "../handler-common" }
pdf_oxide = "0.3"
lopdf = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jpeg-decoder = "0.3"
flate2 = "1"
ttf-parser = "0.21"
subsetter = "0.2"
resvg = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
usvg = { workspace = true, optional = true }